[package]
name = "datacrumbs"
version = "0.1.0"
authors = ["Marius Seritan <git@winding-lines.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
mac_address = "1.0"
failure = "0.1"
failure_derive = "0.1"
git2 = { version = "0.11", no_default_features = true}
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
uuid = { version = "0.8", features = ["v1"]}